--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,21 @@
 			<artifactId>spring-restdocs-mockmvc</artifactId>
 			<scope>test</scope>
 		</dependency>
+		    <!-- Spring Web dependency -->
+		<dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-web</artifactId>
+    	</dependency>
+    	    <!-- Spring Data JPA dependency -->
+    	<dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-data-jpa</artifactId>
+    	</dependency>
+    	    <!-- H2 database dependency -->
+    	<dependency>
+	        <groupId>com.h2database</groupId>
+	        <artifactId>h2</artifactId>
+    	</dependency>
 	</dependencies>
 
 	<build>
