--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url =jdbc:mysql://localhost:3306/football_field_location?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username = hajar
+spring.datasource.password = Hajar@2023
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.format_sql = true
+server.port=8080
+spring.mvc.pathmatch.matching-strategy= ant-path-matcher
+
+
 
